--- a/Python backend/Web server/templates/main.html
+++ b/Python backend/Web server/templates/main.html
@@ -1,20 +1,33 @@
 <!-- index.html (Frontend) -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='styles/styles.css') }}"
+    />
     <title>Unsubscribe Dashboard</title>
   </head>
   <body>
-    <a href="{{ url_for('logout') }}">Logout</a>
-    {% for header in header_dict %}
-      <div>
-        {% for link in header['header'] %}
-        <a href="{{link.strip('<').strip('>')}}">{{ link.strip().split('/')[2] }}</a>
-        {% endfor %}
+    <nav>
+      <div class="navbar">
+        <h1>U-Sub</h1>
+        <p>Remove all unwanted subscriptions in your inbox.</p>
+        {% if 'credentials' in session %}
+        <script src="{{url_for('static', filename='styles/script.js')}}"></script>
+        <a href="{{ url_for('logout') }}">Logout</a>
+        {% else %}
+        <a href="{{ url_for('login') }}">Login</a>
+        {% endif %}
       </div>
-      <hr>
-    {% endfor %}
+    </nav>
+
+    <div id="headers">
+
+    </div>
   </body>
 </html>
